# DUPLO

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cmake-clean.sh  cmake-debug.sh  cmake-release.sh  cmake-xcode.sh
cmake/: FindGMPConfig.cmake
frigate/: CMakeLists.txt  README.md  README.txt  ast.cpp  ast.h  circuit-parser.cpp  circuit-parser.h  circuit.h  circuitoutput.cpp  circuitoutput.h  defines.cpp  defines.h  error.cpp  error.h  exprtest.cpp  exprtest.hh  gates.txt  includes.cpp  includes.h  innerfunction.cpp  innerfunction.h  inputs.txt  interpreter.cpp  interpreter.h  interpreterback.cpp  interpreterback.h  interpretermain.cpp  location.hh  main.cpp  parse_driver.cc  parse_driver.h  parser.cc  parser.hh  parser.yy  position.hh  scanner.cc  scanner.h  scanner.ll  stack.hh  testall.sh  (+11 more)
frigate/circuits/aes/: p1024_aes.wir  p1024b_aes.wir  p128_aes.wir  p128b_aes.wir  p1_aes.wir  p1b_aes.wir  p32_aes.wir  p32b_aes.wir  p4096_aes.wir  p4096b_aes.wir  p512_aes.wir  p512b_aes.wir
frigate/circuits/aes-mac/: p1024_c16aes1.wir  p1024_c16aes16.wir  p1024_c16aes2.wir  p1024_c16aes4.wir  p1024_c16aes8.wir  p1024b_c16aes1.wir  p1024b_c16aes2.wir  p1024b_c16aes4.wir  p1024b_c16aes8.wir  p128_c16aes1.wir  p128_c16aes16.wir  p128_c16aes2.wir  p128_c16aes4.wir  p128_c16aes8.wir  p128b_c16aes1.wir  p128b_c16aes2.wir  p128b_c16aes4.wir  p128b_c16aes8.wir  p1_c1024aes1.wir  p1_c1024aes1024.wir  p1_c1024aes16.wir  p1_c1024aes2.wir  p1_c1024aes32.wir  p1_c1024aes4.wir  p1_c1024aes512.wir  p1_c1024aes8.wir  p1_c1024es128.wir  p1_c128aes1.wir  p1_c128aes16.wir  p1_c128aes2.wir  p1_c128aes32.wir  p1_c128aes4.wir  p1_c128aes64.wir  p1_c128aes8.wir  p1_c16aes1.wir  p1_c16aes16.wir  p1_c16aes2.wir  p1_c16aes4.wir  p1_c16aes8.wir  p1_c2048aes1.wir  (+62 more)
frigate/circuits/fakecircuits/: p12_16_test.wir  p12_1_test.wir  p12_2_test.wir  p12_32_test.wir  p12_4_test.wir  p12_8_test.wir  p14_128_test.wir  p14_16_test.wir  p14_1_test.wir  p14_2_test.wir  p14_32_test.wir  p14_4_test.wir  p14_64_test.wir  p14_8_test.wir  p16_128_test.wir  p16_16_test.wir  p16_1_test.wir  p16_256_test.wir  p16_2_test.wir  p16_32_test.wir  p16_4_test.wir  p16_512_test.wir  p16_64_test.wir  p16_8_test.wir  p17_1024_test.wir  p17_128_test.wir  p17_16_test.wir  p17_256_test.wir  p17_32_test.wir  p17_4_test.wir  p17_512_test.wir  p17_64_test.wir  p17_8_test.wir  p18_1024_test.wir  p18_128_test.wir  p18_16_test.wir  p18_1_test.wir  p18_2048_test.wir  p18_256_test.wir  p18_32_test.wir  (+26 more)
frigate/circuits/matrixmult/: p1024_matrixmult16x16_2x2.wir  p1024_matrixmult16x16_4x4.wir  p1024_matrixmult16x16_8x8.wir  p1024b_matrixmult16x16_16x16.wir  p1024b_matrixmult16x16_2x2.wir  p1024b_matrixmult16x16_4x4.wir  p1024b_matrixmult16x16_8x8.wir  p128_matrixmult16x16_16x16.wir  p128_matrixmult16x16_2x2.wir  p128_matrixmult16x16_4x4.wir  p128_matrixmult16x16_8x8.wir  p128b_matrixmult16x16_2x2.wir  p128b_matrixmult16x16_4x4.wir  p128b_matrixmult16x16_8x8.wir  p1_matrixmult16x16_2x2.wir  p1_matrixmult16x16_4x4.wir  p1_matrixmult16x16_8x8.wir  p1b_matrixmult16x16_16x16.wir  p1b_matrixmult16x16_2x2.wir  p1b_matrixmult16x16_4x4.wir  p1b_matrixmult16x16_8x8.wir  p32_matrixmult16x16_1x1.wir  p32_matrixmult16x16_2x2.wir  p32_matrixmult16x16_4x4.wir  p32_matrixmult16x16_8x8.wir  p32b_matrixmult16x16_16x16.wir  p32b_matrixmult16x16_2x2.wir  p32b_matrixmult16x16_4x4.wir  p32b_matrixmult16x16_8x8.wir  p4096_matrixmult16x16_16x16.wir  p4096_matrixmult16x16_2x2.wir  p4096_matrixmult16x16_4x4.wir  p4096_matrixmult16x16_8x8.wir  p512_matrixmult16x16_16x16.wir  p512_matrixmult16x16_2x2.wir  p512_matrixmult16x16_4x4.wir  p512_matrixmult16x16_8x8.wir  p512b_matrixmult16x16_2x2.wir  p512b_matrixmult16x16_4x4.wir  p512b_matrixmult16x16_8x8.wir
frigate/circuits/randomcCircuits/: p12_16_test.wir  p12_1_test.wir  p12_2_test.wir  p12_32_test.wir  p12_4_test.wir  p12_8_test.wir  p14_128_test.wir  p14_16_test.wir  p14_1_test.wir  p14_2_test.wir  p14_32_test.wir  p14_4_test.wir  p14_64_test.wir  p14_8_test.wir  p16_128_test.wir  p16_16_test.wir  p16_1_test.wir  p16_256_test.wir  p16_2_test.wir  p16_32_test.wir  p16_4_test.wir  p16_512_test.wir  p16_64_test.wir  p16_8_test.wir  p17_1024_test.wir  p17_128_test.wir  p17_16_test.wir  p17_256_test.wir  p17_32_test.wir  p17_4_test.wir  p17_512_test.wir  p17_64_test.wir  p17_8_test.wir  p18_1024_test.wir  p18_128_test.wir  p18_16_test.wir  p18_1_test.wir  p18_2048_test.wir  p18_256_test.wir  p18_32_test.wir  (+26 more)
frigate/tests/: aes.wir  arrayinit.wir  assignwires.wir  countexample.wir  hamming.wir  includetest2.wir  includetest3.wir  lcs.wir  matrixmult16x16.wir  matrixmult3x3.wir  matrixmult5x5.wir  matrixmult8x8.wir  mil.wir  mult1024.wir  mult256.wir  mult4096.wir  negvalidationtest.wir  newhamming.wir  newrsa64.wir  procexample.wir  proctest.wir  rsa1024.wir  rsa128.wir  rsa64.wir  temp.wir  uc.wir  validationtest.wir  zlargestever.wir
frigate/tests/duplo/: AES_SBox.txt  SLP_AES_113.txt  aes backup  aes.wir  aes2_bu1.wir  aes_KeyEx.wir  aes_bu.wir  aes_bu1.wir  hamming.wir  hamming1.wir  rsa64.wir
src/: CMakeLists.txt
src/circuit/: circuit.cpp  circuit.h
src/duplo/: duplo-constructor.cpp  duplo-constructor.h  duplo-evaluator.cpp  duplo-evaluator.h  duplo.cpp  duplo.h
src/duplo-mains/: duplo-const-main.cpp  duplo-eval-main.cpp  mains.h  table-producer.cpp
src/duplo-util/: filenames.h  global-constants.h  storage.cpp  storage.h  typedefs.h  util.h
src/garbling/: const-garbled-circuit.cpp  const-garbled-circuit.h  eval-garbled-circuit.cpp  eval-garbled-circuit.h  garbled-circuit.cpp  garbled-circuit.h  garbling-handler.cpp  garbling-handler.h
src/mains/: duplo-const-main.cpp  duplo-eval-main.cpp  mains.h  table-producer.cpp
test/: AES_Encrypt.h  CMakeLists.txt  run-all-tests.cpp  test-circuit-parser.cpp  test-duplo-preprocess-aux-data.cpp  test-duplo-preprocess-bucketing.cpp  test-duplo-setup.cpp  test-duplo-soldering.cpp  test-duplo.h  test-garbled-circuit.cpp  test.h
test/data/: AES-expanded.txt  DES-expanded.txt  adder_64bit.txt  and.txt  comparator_32bit_signed_lteq.txt  comparator_32bit_unsigned_lt.txt  (+3 more)
