find_package(BISON 2.7 EXACT QUIET)
find_package(FLEX 2.5.35 QUIET)

if(${BISON_FOUND} AND ${FLEX_FOUND})

#Build parser
BISON_TARGET(RAW_PARSER parser.yy ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/parser.cc)
add_library(FRIGATE_PARSER ${BISON_RAW_PARSER_OUTPUTS})
target_include_directories(FRIGATE_PARSER PRIVATE ${CMAKE_CURRENT_LIST_DIR} ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})

#Build Scanner
FLEX_TARGET(RAW_SCANNER scanner.ll ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/scanner.cc COMPILE_FLAGS --yylineno)
add_library(FRIGATE_SCANNER ${FLEX_RAW_SCANNER_OUTPUTS})
target_include_directories(FRIGATE_SCANNER PRIVATE ${CMAKE_CURRENT_LIST_DIR} ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})

add_library(FRIGATE_WIRE ${CMAKE_CURRENT_LIST_DIR}/wire.cpp)

add_library(FRIGATE_WIREPOOL ${CMAKE_CURRENT_LIST_DIR}/wirepool.cpp)
target_link_libraries(FRIGATE_WIREPOOL FRIGATE_WIRE)

add_library(FRIGATE_ERROR ${CMAKE_CURRENT_LIST_DIR}/error.cpp)

add_library(FRIGATE_TYPES ${CMAKE_CURRENT_LIST_DIR}/types.cpp)
target_link_libraries(FRIGATE_TYPES FRIGATE_ERROR)

add_library(FRIGATE_AST ${CMAKE_CURRENT_LIST_DIR}/ast.cpp)
target_link_libraries(FRIGATE_AST FRIGATE_TYPES)

add_library(FRIGATE_INCLUDES ${CMAKE_CURRENT_LIST_DIR}/includes.cpp)
target_link_libraries(FRIGATE_INCLUDES FRIGATE_AST)

add_library(FRIGATE_DEFINES ${CMAKE_CURRENT_LIST_DIR}/defines.cpp)
target_link_libraries(FRIGATE_DEFINES FRIGATE_AST)

add_library(FRIGATE_PARSE_DRIVER ${CMAKE_CURRENT_LIST_DIR}/parse_driver.cc)
target_link_libraries(FRIGATE_PARSE_DRIVER FRIGATE_PARSER)
target_include_directories(FRIGATE_PARSE_DRIVER PRIVATE ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})

add_library(FRIGATE_EXPRTEST ${CMAKE_CURRENT_LIST_DIR}/exprtest.cpp)
target_link_libraries(FRIGATE_EXPRTEST FRIGATE_PARSE_DRIVER)

add_library(FRIGATE_CIRCUIT_OUTPUT ${CMAKE_CURRENT_LIST_DIR}/circuitoutput.cpp)
target_link_libraries(FRIGATE_CIRCUIT_OUTPUT FRIGATE_AST FRIGATE_TYPES FRIGATE_WIREPOOL FRIGATE_WIRE)

add_library(FRIGATE_CIRCUIT_PARSER ${CMAKE_CURRENT_LIST_DIR}/circuit-parser.cpp)

add_library(FRIGATE_TYPE_GENERATE ${CMAKE_CURRENT_LIST_DIR}/typegenerate.cpp)

add_library(FRIGATE_VARIABLE ${CMAKE_CURRENT_LIST_DIR}/variable.cpp)
target_link_libraries(FRIGATE_VARIABLE FRIGATE_TYPES FRIGATE_WIRE)

add_library(FRIGATE_INTERPRETER ${CMAKE_CURRENT_LIST_DIR}/interpreter.cpp)

add_executable(Frigate ${CMAKE_CURRENT_LIST_DIR}/main.cpp)
target_link_libraries(Frigate FRIGATE_INTERPRETER FRIGATE_TYPE_GENERATE FRIGATE_CIRCUIT_PARSER FRIGATE_CIRCUIT_OUTPUT FRIGATE_EXPRTEST FRIGATE_PARSE_DRIVER FRIGATE_PARSER FRIGATE_DEFINES FRIGATE_INCLUDES FRIGATE_AST FRIGATE_VARIABLE FRIGATE_TYPES FRIGATE_ERROR FRIGATE_WIREPOOL FRIGATE_WIRE FRIGATE_SCANNER)

else(${BISON_FOUND} AND ${FLEX_FOUND})

message("==================")
message("Frigate not built due to:")

if(NOT ${BISON_FOUND})
message("Bison 2.7 not found")
endif(NOT ${BISON_FOUND})

if(NOT ${FLEX_FOUND})
message("Flex 2.5.35 or newer not found")
endif(NOT ${FLEX_FOUND})

message("==================")
endif(${BISON_FOUND} AND ${FLEX_FOUND})